<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="activity.AkademikFragment">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/title_dm"
            android:gravity="center"
            android:paddingBottom="30dp"
            android:paddingTop="10dp"
            android:textSize="20sp"
            />

        <TableRow>
            <TextView
                android:text="@string/npm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                />

            <TextView
                android:text="@string/colon"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/txtNPM"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                />

        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                />

            <TextView
                android:text="@string/colon"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/txtNama"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                />

        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/ipk_lokal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                />

            <TextView
                android:text="@string/colon"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/txtIPKLokal"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                />

        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/ipk_utama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                />

            <TextView
                android:text="@string/colon"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/txtIPKUtama"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                />

        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/ipk_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                />

            <TextView
                android:text="@string/colon"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/txtIPKTotal"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                />

        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/sks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                />

            <TextView
                android:text="@string/colon"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/txtSKS"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                />

        </TableRow>
    </TableLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttondetail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="@string/button_rangkuman"
        />

</LinearLayout>